// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a PageContent with a fluid container 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
}

.c1 {
  padding: 2rem 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

@media (max-width:768px) {
  .c2 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width:768px) {
  .c1 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c0"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a PageContent with breakpoint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 1024px;
}

.c1 {
  padding: 2rem 1rem;
}

@media (max-width:768px) {
  .c2 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width:768px) {
  .c1 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c0"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a PageContent with wrapper props 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 768px;
}

.c1 {
  padding: 2rem 1rem;
}

@media (max-width:768px) {
  .c2 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width:768px) {
  .c1 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="c0"
  style="background-color: red;"
>
  <div
    class="c1 c2 c0"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a basic PageContent 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 768px;
}

.c1 {
  padding: 2rem 1rem;
}

@media (max-width:768px) {
  .c2 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width:768px) {
  .c1 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c0"
  >
    test
  </div>
</div>
`;
